--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "material-design-icons-iconfont": "^6.7.0",
+    "sass-loader": "^13.3.2",
+    "vue": "^3.2.13",
+    "vuetify": "^3.3.12",
+    "wave-ui": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mdi/font": "^7.2.96",
+    "@mdi/js": "^7.2.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
